--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -4,15 +4,12 @@ server:
 spring:
   application:
     name: API-GATEWAY
+  config:
+    import: configserver:http://localhost:8082
   cloud:
     gateway:
       routes:
         - id: dma-service
           uri: lb://DMA-SERVICE
           predicates:
-            - Path=/dma/**
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+            - Path=/api/dma/**
