circuit breaker for brand fetching in product service and validations

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -18,3 +18,9 @@ spring:
           uri: lb://PRODUCT-SERVICE
           predicates:
             - Path=/api/product/**
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
