--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -1,17 +1,20 @@
 server:
-  port: 8084
+  port: ${product-server-port}
   servlet:
     context-path: /api/product
 
 spring:
   application:
     name: PRODUCT-SERVICE
+  profiles:
+    active:
+      - dev
   config:
     import: configserver:http://localhost:8082
   datasource:
-    url: jdbc:mysql://localhost:3306/product?createDatabaseIfNotExist=true
-    username: root
-    password: Root@123
+    url: jdbc:mysql://localhost:3306/${product-database}?createDatabaseIfNotExist=true
+    username: ${mysql-username}
+    password: ${mysql-password}
   jpa:
     show-sql: false
     hibernate:
